  Wierd time code is blocking. (Brian, ? for suggestion)
- Return to base menu when exiting base screens rather than returning to map.
  (Brian, emh and Max McCracken for suggestion)
- Added sorting bases by size, set to largest bases first. (Brian, Max McCracken for suggestion)
- Implemented Security and Reactor values obtained from data files. (Brian)

OTHER CHANGES:
- Code cleanups and reformatting. (Phil)
- Cleanup a bug introduced in player.py, item may be int rather than object. (Brian)

v0.26a (released 2007.08.12):

USER-VISIBLE CHANGES:
- Made Very Easy mode actually playable. (Phil, Simon Goodall for bug
  report.)

v0.26 (released 2007.08.09):
  [Note that the official Endgame: Singularity soundtrack is released
   separately from the game. It can be found at the official website:
      http://emhsoft.com/singularity/
   In addition, user-added tracks are also supported.  See the README
   for details.]

USER-VISIBLE CHANGES:
- Added CPU indicator to the main screen. (emh, John DiMarco for suggestion)
- Research screen will now automatically prune bases. (emh, John DiMarco
  for suggestion)
- Fixed slight flicker when toggling options. (emh)
* Added difficulty selection. (emh, many people for suggestion)
* Added simple background music playing ability. (emh, Matthew Robinson for
  initial patch.)
- Single-CPU bases have CPU power listed. (emh, robaal for suggestion)
* Delicious retro-futuristic music specially made for Endgame: Singularity,
  including the Psycle source for the tracks! (Max McCracken)
- License change of the various data that the developers control to BY-SA
  3.0 (from BY-SA 2.5).  (Phil, emh)
- License change of the Acknowledge font to 'free to use for any purpose;'
  thanks so much, Brian Kent! (Phil, Brian Kent)

OTHER CHANGES:
- Changed data-loading code to use UTF. (biro.daniel for patch)

v0.25 (released 2006.08.10):

USER-VISIBLE CHANGES:
* There is now a py2exe version available for Windows, which does not